Podcast: Host card design

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -105,83 +105,27 @@
 	</section>
 
 
-	<!-- Hosts v1 Basic -->
-	<section class="px-8 py-16 text-center sm:grid sm:place-content-center">
-		<div class="max-w-5xl mx-auto space-y-12">
-			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">Meet Your Hosts</h2>
-			<div class="grid gap-12 sm:grid-cols-2 lg:grid-cols-3">
-
-				<!-- Melissa -->
-				<div class="space-y-4">
-					<img src="assets/images/podcast/WW_Headshot_Melissa.jpg" alt="Melissa Swinehart headshot"
-						class="mx-auto rounded-full w-48 h-48 object-cover border border-gray-200 shadow-md">
-					<blockquote class="italic text-gray-700">“The podcast is a cool way to get to dive deeper into what
-						we
-						are as a cooperative and learn more about the people we work with on a personal level.”
-					</blockquote>
-					<p class="text-sm text-gray-700">Melissa is a charismatic professional who specializes in
-						transforming
-						complex ideas into executable concepts. With a deep expertise and talent in marketing, branding
-						and
-						communications, she’s breathing life into brand awareness to deliver fresh, impactful results.
-					</p>
-					<p class="font-bold">Melissa Swinehart</p>
-				</div>
-
-				<!-- Elizabeth -->
-				<div class="space-y-4">
-					<img src="assets/images/podcast/WW_Headshot_Elizabeth.jpg" alt="Elizabeth Schilling headshot"
-						class="mx-auto rounded-full w-48 h-48 object-cover border border-gray-200 shadow-md">
-					<blockquote class="italic text-gray-700">“I love highlighting the people who are big picture
-						thinkers,
-						problem solvers, and passionate about their work. No matter the scale of the challenge at hand,
-						I
-						believe our collective brainpower can get us to solutions.”</blockquote>
-					<p class="text-sm text-gray-700">With over 20 years of experience in corporate communications,
-						Elizabeth
-						is committed to finding meaningful connections behind the scenes and while amplifying the voices
-						of
-						the people behind the power. Her mission at Tri-State is to help employees celebrate the strong
-						connection between their individual work and the greater purpose of organization – powering the
-						West
-						- reliably, affordably, and responsibly.</p>
-					<p class="font-bold">Elizabeth Schilling</p>
-				</div>
-
-
-
-				<!-- Julia -->
-				<div class="space-y-4">
-					<img src="assets/images/podcast/WW_Headshot_Julia.jpg" alt="Julia Perry headshot"
-						class="mx-auto rounded-full w-48 h-48 object-cover border border-gray-200 shadow-md">
-					<blockquote class="italic text-gray-700">“My main contribution seems to be recklessly voicing
-						intrusive
-						thoughts that may or may not survive the final edit.”</blockquote>
-					<p class="text-sm text-gray-700">With a background in graphic design, Julia’s tackling interviews
-						from a
-						whole different angle. A lifelong learner, she’s passionate about understanding not only her
-						coworkers, but also piecing together Tri-State’s role in the larger U.S. grid and disseminating
-						that
-						to a wider audience.</p>
-					<p class="font-bold">Julia Perry</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<!-- Hosts v2 Basic Cards -->
+	<!-- Hosts v5 - v1 with cards -->
 	<section class="px-8 py-20 text-center sm:grid sm:place-content-center bg-gray-100">
 		<div class="max-w-6xl mx-auto">
 			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">Meet Your Hosts</h2>
 			<div class="grid gap-16 mt-24 sm:grid-cols-2 lg:grid-cols-3">
 				<!-- Host Card -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-left">
+				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
 					<img src="assets/images/podcast/WW_Headshot_Elizabeth.jpg" alt="Elizabeth Schilling"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="italic text-sm text-gray-700 mb-4">“I love highlighting the people who are big
-						picture thinkers, problem solvers, and passionate about their work. No matter the scale of the
-						challenge at hand, I believe our collective brainpower can get us to solutions.”</blockquote>
+					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-10 pointer-events-none select-none translate-x-4 translate-y-6" />
+						<p class="relative z-10">I love highlighting the people who are big picture thinkers, problem
+							solvers, and
+							passionate about their work. No matter the scale of the challenge at hand, I believe our
+							collective brainpower
+							can get us to solutions.</p>
+					</blockquote>
+
 					<p class="text-sm text-gray-700 mb-4">With over 20 years of experience in corporate communications,
 						Elizabeth is committed to finding meaningful connections behind the scenes and while amplifying
 						the
@@ -193,14 +137,21 @@
 					<p class="font-bold text-sm text-gray-900">Elizabeth Schilling</p>
 				</div>
 
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-left">
+				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
 					<img src="assets/images/podcast/WW_Headshot_Melissa.jpg" alt="Melissa Swinehart"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="italic text-sm text-gray-700 mb-4">“The podcast is a cool way to get to dive
-						deeper
-						into what we are as a cooperative and learn more about the people we work with on a personal
-						level.”
+					<blockquote
+						class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded overflow-hidden">
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute top-0 left-0 w-12 sm:w-16 opacity-5 pointer-events-none select-none -translate-x-4 -translate-y-2" />
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-5 pointer-events-none select-none translate-x-4 translate-y-2" />
+						<p class="relative z-10">The podcast is a cool way to get to dive deeper into what we are as a
+							cooperative and learn
+							more about the people we work with on a personal level.</p>
 					</blockquote>
+
+
 					<p class="text-sm text-gray-700 mb-4">Melissa is a charismatic professional who specializes in
 						transforming complex ideas into executable concepts. With a deep expertise and talent in
 						marketing,
@@ -210,11 +161,19 @@
 					<p class="font-bold text-sm text-gray-900">Melissa Swinehart</p>
 				</div>
 
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-left">
+				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
 					<img src="assets/images/podcast/WW_Headshot_Julia.jpg" alt="Julia Perry"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="italic text-sm text-gray-700 mb-4">“My main contribution seems to be recklessly
-						voicing intrusive thoughts that may or may not survive the final edit.”</blockquote>
+					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 rounded">
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
+						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-10 pointer-events-none select-none translate-x-4 translate-y-6" />
+						<p class="relative z-10">My main contribution seems to be recklessly voicing intrusive thoughts
+							that may or may not
+							survive the final edit.</p>
+					</blockquote>
+
 					<p class="text-sm text-gray-700 mb-4">With a background in graphic design, Julia’s tackling
 						interviews
 						from a whole different angle. A lifelong learner, she’s passionate about understanding not only
@@ -227,136 +186,6 @@
 			</div>
 		</div>
 	</section>
-
-
-	<!-- Hosts v3 Names to Top -->
-	<section class="px-8 py-20 text-center sm:grid sm:place-content-center bg-gray-100">
-		<div class="max-w-6xl mx-auto">
-			<h2 class="font-serif text-2xl font-light text-wrap-balance mb-16">Meet Your Hosts</h2>
-			<div class="grid gap-16 sm:grid-cols-2 lg:grid-cols-3 mt-28">
-				<!-- Elizabeth -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Elizabeth.jpg" alt="Elizabeth Schilling"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Elizabeth Schilling</p>
-					<blockquote class="italic text-sm text-gray-700 mb-4 text-left">“I love highlighting the people who
-						are
-						big picture thinkers, problem solvers, and passionate about their work. No matter the scale of
-						the
-						challenge at hand, I believe our collective brainpower can get us to solutions.”</blockquote>
-					<p class="text-sm text-gray-700 text-left">With over 20 years of experience in corporate
-						communications,
-						Elizabeth is committed to finding meaningful connections behind the scenes and while amplifying
-						the
-						voices of the people behind the power. Her mission at Tri-State is to help employees celebrate
-						the
-						strong connection between their individual work and the greater purpose of organization –
-						powering
-						the West - reliably, affordably, and responsibly.</p>
-				</div>
-
-				<!-- Melissa -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Melissa.jpg" alt="Melissa Swinehart"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Melissa Swinehart</p>
-					<blockquote class="italic text-sm text-gray-700 mb-4 text-left">“The podcast is a cool way to get to
-						dive deeper into what we are as a cooperative and learn more about the people we work with on a
-						personal level.”</blockquote>
-					<p class="text-sm text-gray-700 text-left">Melissa is a charismatic professional who specializes in
-						transforming complex ideas into executable concepts. With a deep expertise and talent in
-						marketing,
-						branding and communications, she’s breathing life into brand awareness to deliver fresh,
-						impactful
-						results.</p>
-				</div>
-
-				<!-- Julia -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Julia.jpg" alt="Julia Perry"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Julia Perry</p>
-					<blockquote class="italic text-sm text-gray-700 mb-4 text-left">“My main contribution seems to be
-						recklessly voicing intrusive thoughts that may or may not survive the final edit.”</blockquote>
-					<p class="text-sm text-gray-700 text-left">With a background in graphic design, Julia’s tackling
-						interviews from a whole different angle. A lifelong learner, she’s passionate about
-						understanding
-						not only her coworkers, but also piecing together Tri-State’s role in the larger U.S. grid and
-						disseminating that to a wider audience.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="px-8 py-20 text-center sm:grid sm:place-content-center bg-gray-100">
-		<div class="max-w-6xl mx-auto">
-			<h2 class="font-serif text-2xl font-light text-wrap-balance mb-16">Meet Your Hosts</h2>
-			<div class="grid gap-16 sm:grid-cols-2 lg:grid-cols-3 mt-28">
-				<!-- Elizabeth -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Elizabeth.jpg" alt="Elizabeth Schilling"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Elizabeth Schilling</p>
-					<blockquote class="text-sm text-white bg-[#3B1A1B] -mx-8 px-6 py-4 rounded-lg not-italic mb-4">“I
-						love
-						highlighting
-						the people who are big picture thinkers, problem solvers, and passionate about their work. No
-						matter
-						the scale of the challenge at hand, I believe our collective brainpower can get us to
-						solutions.”
-					</blockquote>
-					<p class="text-sm text-gray-700 text-left">With over 20 years of experience in corporate
-						communications,
-						Elizabeth is committed to finding meaningful connections behind the scenes and while amplifying
-						the
-						voices of the people behind the power. Her mission at Tri-State is to help employees celebrate
-						the
-						strong connection between their individual work and the greater purpose of organization –
-						powering
-						the West - reliably, affordably, and responsibly.</p>
-				</div>
-
-				<!-- Melissa -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Melissa.jpg" alt="Melissa Swinehart"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Melissa Swinehart</p>
-					<blockquote class="text-sm text-white bg-[#3B1A1B] -mx-8 px-6 py-4 rounded-lg not-italic mb-4">“The
-						podcast is
-						a
-						cool way to get to dive deeper into what we are as a cooperative and learn more about the people
-						we
-						work with on a personal level.”</blockquote>
-					<p class="text-sm text-gray-700 text-left">Melissa is a charismatic professional who specializes in
-						transforming complex ideas into executable concepts. With a deep expertise and talent in
-						marketing,
-						branding and communications, she’s breathing life into brand awareness to deliver fresh,
-						impactful
-						results.</p>
-				</div>
-
-				<!-- Julia -->
-				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Julia.jpg" alt="Julia Perry"
-						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<p class="font-serif text-lg text-gray-900 font-semibold mb-4">Julia Perry</p>
-					<blockquote class="text-sm text-white bg-[#3B1A1B] -mx-8 px-6 py-4 rounded-lg not-italic mb-4">“My
-						main
-						contribution seems to be recklessly voicing intrusive thoughts that may or may not survive the
-						final
-						edit.”</blockquote>
-					<p class="text-sm text-gray-700 text-left">With a background in graphic design, Julia’s tackling
-						interviews from a whole different angle. A lifelong learner, she’s passionate about
-						understanding
-						not only her coworkers, but also piecing together Tri-State’s role in the larger U.S. grid and
-						disseminating that to a wider audience.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-
 
 
 
