--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -112,12 +112,15 @@
 			<div class="grid gap-16 mt-24 sm:grid-cols-2 lg:grid-cols-3">
 				<!-- Host Card -->
 				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Elizabeth.jpg" alt="Elizabeth Schilling"
+					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Elizabeth.jpg"
+						alt="Elizabeth Schilling"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
 					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
 							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
 							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-10 pointer-events-none select-none translate-x-4 translate-y-6" />
 						<p class="relative z-10">I love highlighting the people who are big picture thinkers, problem
 							solvers, and
@@ -138,18 +141,21 @@
 				</div>
 
 				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Melissa.jpg" alt="Melissa Swinehart"
+					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Melissa.jpg"
+						alt="Melissa Swinehart"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote
-						class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded overflow-hidden">
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
-							class="absolute top-0 left-0 w-12 sm:w-16 opacity-5 pointer-events-none select-none -translate-x-4 -translate-y-2" />
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
-							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-5 pointer-events-none select-none translate-x-4 translate-y-2" />
+					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
+							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
+							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-10 pointer-events-none select-none translate-x-4 translate-y-6" />
 						<p class="relative z-10">The podcast is a cool way to get to dive deeper into what we are as a
 							cooperative and learn
 							more about the people we work with on a personal level.</p>
 					</blockquote>
+
 
 
 					<p class="text-sm text-gray-700 mb-4">Melissa is a charismatic professional who specializes in
@@ -162,17 +168,21 @@
 				</div>
 
 				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
-					<img src="assets/images/podcast/WW_Headshot_Julia.jpg" alt="Julia Perry"
+					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Julia.jpg"
+						alt="Julia Perry"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 rounded">
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
 							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
-						<img src="./assets/images/podcast/quote.svg" alt="" aria-hidden="true"
+						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
+							aria-hidden="true"
 							class="absolute bottom-0 right-0 w-12 sm:w-16 rotate-180 opacity-10 pointer-events-none select-none translate-x-4 translate-y-6" />
 						<p class="relative z-10">My main contribution seems to be recklessly voicing intrusive thoughts
 							that may or may not
 							survive the final edit.</p>
 					</blockquote>
+
 
 					<p class="text-sm text-gray-700 mb-4">With a background in graphic design, Julia’s tackling
 						interviews
