Podcast: Host card design v3
Final adjustments and some mobile optimization.

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -106,16 +106,17 @@
 
 
 	<!-- Hosts v5 - v1 with cards -->
-	<section class="px-8 py-20 text-center sm:grid sm:place-content-center bg-gray-100">
+	<section class="px-4 pb-20">
 		<div class="max-w-6xl mx-auto">
-			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">Meet Your Hosts</h2>
-			<div class="grid gap-16 mt-24 sm:grid-cols-2 lg:grid-cols-3">
+			<h2 class="text-center font-serif text-2xl font-light mb-0">Meet Your Hosts</h2>
+			<div class="grid gap-24 mt-24 max-w-md mx-auto lg:grid-cols-3 lg:max-w-none lg:gap-8 xl:gap-20">
 				<!-- Host Card -->
 				<div class="relative bg-white rounded-lg shadow-lg pt-20 pb-8 px-6 text-center">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Elizabeth.jpg"
 						alt="Elizabeth Schilling"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+					<blockquote
+						class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 border-0 py-4 bg-[#f9f9f9] rounded">
 						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
 							aria-hidden="true"
 							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
@@ -144,7 +145,8 @@
 					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Melissa.jpg"
 						alt="Melissa Swinehart"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+					<blockquote
+						class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 border-0 py-4 bg-[#f9f9f9] rounded">
 						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
 							aria-hidden="true"
 							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
@@ -171,7 +173,8 @@
 					<img src="https://tristate.coop/sites/default/files/images/podcast/WW_Headshot_Julia.jpg"
 						alt="Julia Perry"
 						class="absolute -top-16 left-1/2 -translate-x-1/2 w-32 h-32 rounded-full border-4 border-white object-cover shadow-md">
-					<blockquote class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 py-4 bg-[#f9f9f9] rounded">
+					<blockquote
+						class="relative italic text-sm text-gray-700 m-0 mb-8 px-6 border-0 py-4 bg-[#f9f9f9] rounded">
 						<img src="https://tristate.coop/sites/default/files/images/podcast/quote.svg" alt=""
 							aria-hidden="true"
 							class="absolute top-0 left-0 w-12 sm:w-16 opacity-10 pointer-events-none select-none -translate-x-4 -translate-y-6" />
