OBR: AMI adjustments v1

--- a/obr.htm
+++ b/obr.htm
@@ -361,8 +361,8 @@
 	<section>
 
 
-		<h2 class="font-serif text-2xl font-light text-center mt-8">
-			Check Your AMI
+		<h2 class="font-serif text-2xl font-light text-center m-0 pb-4" style="background-color: #F5F5F5;">
+			Your upgrades could be free
 		</h2>
 		<p>
 			We’re glad you’re interested in the Electrify & Save On-Bill Repayment Program. However, you may
@@ -383,12 +383,12 @@
 		<!-- Mobile Table -->
 		<table class="border border-gray-500 w-full max-w-sm min-w-0 mx-auto lg:hideme">
 			<thead>
-				<tr class="bg-gray-200">
+				<tr class="bg-gray">
 					<th class="border border-gray-500 px-4 py-2 text-center">Household Size</th>
 					<th class="border border-gray-500 px-4 py-2 text-center">Income Threshold</th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody class="bg-white">
 				<tr>
 					<td class="border px-4 py-2">1 Person</td>
 					<td class="border px-4 py-2">$52,800</td>
@@ -427,7 +427,7 @@
 		<!-- Desktop Table -->
 		<table class="hideme lg:table table-auto border border-gray-500 w-full text-center">
 			<thead>
-				<tr class="bg-gray-200">
+				<tr class="bg-white">
 					<th class="border border-gray-500 py-2 text-right">Household Size</th>
 					<th class="border border-gray-500 py-2 text-center">1</th>
 					<th class="border border-gray-500 py-2 text-center">2</th>
@@ -441,15 +441,15 @@
 			</thead>
 			<tbody>
 				<tr>
-					<th class="border border-gray-500 py-2 text-right bg-gray-100">Income Threshold</th>
-					<td class="border py-2 text-center">$52,800</td>
-					<td class="border py-2 text-center">$60,320</td>
-					<td class="border py-2 text-center">$67,840</td>
-					<td class="border py-2 text-center">$78,062</td>
-					<td class="border py-2 text-center">$90,551</td>
-					<td class="border py-2 text-center">$103,041</td>
-					<td class="border py-2 text-center">$105,383</td>
-					<td class="border py-2 text-center">$107,725</td>
+					<th class="border border-gray-500 py-2 text-right bg-white">Income Threshold</th>
+					<td class="border py-2 text-center bg-white">$52,800</td>
+					<td class="border py-2 text-center bg-white">$60,320</td>
+					<td class="border py-2 text-center bg-white">$67,840</td>
+					<td class="border py-2 text-center bg-white">$78,062</td>
+					<td class="border py-2 text-center bg-white">$90,551</td>
+					<td class="border py-2 text-center bg-white">$103,041</td>
+					<td class="border py-2 text-center bg-white">$105,383</td>
+					<td class="border py-2 text-center bg-white">$107,725</td>
 				</tr>
 			</tbody>
 		</table>
