Reliability Pages: Hero z-index fix
Navigation overlays the text without this fix.

--- a/erp.htm
+++ b/erp.htm
@@ -55,7 +55,7 @@
 <body>
 	<main id="main">
 		<div class="block-region-content">
-			<section class="relative flex flex-col justify-center min-h-[50vh] lg:h-[500px] lg:min-h-0">
+			<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/ts-line-repair-9558-800x800.jpg"
 					alt="Transmission lines at sunrise in rural area"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
