--- a/powering-future.htm
+++ b/powering-future.htm
@@ -56,7 +56,7 @@
 <body>
 	<main id="main">
 		<div class="block-region-content">
-			<section class="relative flex flex-col justify-center min-h-[50vh] lg:h-[500px] lg:min-h-0">
+			<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/cooperative-benefits/trucks-on-dirt-road-near-transmission-lines.png"
 					alt="" class="absolute inset-0 w-full h-full object-cover z-0" />
 				<div
