--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -52,7 +52,7 @@
 <body>
 	<main id="main">
 		<div class="block-region-content">
-			<section class="relative flex flex-col justify-center min-h-[50vh] lg:h-[500px] lg:min-h-0">
+			<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/BurroSunshineBefore-1200x800.jpg"
 					alt="Power lines running through mountain landscape"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
