OBR: Spacing fix

--- a/obr.htm
+++ b/obr.htm
@@ -164,43 +164,39 @@
 		<div data-zoho-container></div>
 	</section>
 	<!-- Video Columns -->
-	<section class="min-h-96 bg-gray sm:grid sm:grid-cols-2">
-		<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:order-2">
-			<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2024/happy-family-extended-900x600.webp"
+	<section class="min-h-96 bg-gray mt-8 sm:grid sm:grid-cols-2">
+		<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:order-2"><img
 				alt="Don't Choose Between Magic Land and Home Upgrades | Upgrade Home Installation for Energy Efficiency"
-				class="absolute size-full object-cover" />
-			<a href="https://www.youtube.com/embed/7tuWP-26NL4" data-featherlight="iframe"
-				data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-				data-featherlight-iframe-width="500" class="z-10">
-				<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
-					alt="Play button" class="size-24 sm:size-44" />
-			</a>
+				class="absolute size-full object-cover"
+				src="https://tristate.coop/sites/default/files/images/electrify-and-save/2024/happy-family-extended-900x600.webp" />
+			<a class="z-10" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true"
+				data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
+				href="https://www.youtube.com/embed/7tuWP-26NL4"> <img alt="Play button" class="size-24 sm:size-44"
+					src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" /> </a>
 		</div>
+
 		<div class="gap-4 px-8 py-16 grid place-content-center sm:p-16 sm:order-1">
-			<p>
-				<strong>HOME UPGRADES WITH NO UPFRONT COST</strong><br>
-				From windows, doors, and insulation to heat pumps, there are tons
-				of affordable upgrades available for your home or business.
-			</p>
-			<p>
-				<strong>AM I ELIGIBLE?</strong>
-			</p>
+			<p><strong>HOME UPGRADES WITH NO UPFRONT COST</strong><br />
+				From windows, doors, and insulation to heat pumps, there are tons of affordable upgrades available for
+				your
+				home or business.</p>
+
+			<p><strong>AM I ELIGIBLE?</strong></p>
+
 			<ul class="list-disc text-base ml-6 -mt-4">
 				<li>Be the owner of a property in a participating Co-Op service territory with a valid account</li>
-				<li> Have 12 consecutive months of payments without a shut off
-					notice</li>
-				<li> Have no late penalties for the previous 6 consecutive months,
-					unless member agress to enroll in autopay</li>
+				<li>Have 12 consecutive months of payments without a shut off notice</li>
+				<li>Have no late penalties for the previous 6 consecutive months, unless member agress to enroll in
+					autopay
+				</li>
 			</ul>
-			<p>
-				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ.pdf"
-					target="_blank"
-					class="block items-center gap-2 border border-solid rounded-full px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">
-					Learn More
-				</a>
-			</p>
+
+			<p><a class="block items-center gap-2 border border-solid rounded-full px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex"
+					href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ.pdf"
+					target="_blank">Learn More </a></p>
 		</div>
 	</section>
+
 
 	<!-- Video Carousel -->
 	<section>
