ERP: New content and PDF.  New image.

--- a/erp.htm
+++ b/erp.htm
@@ -55,7 +55,7 @@
 <body>
 	<main id="main">
 		<div class="block-region-content">
-			<section class="relative flex flex-col justify-center min-h-[50vh] z-0 lg:h-[500px] lg:min-h-0">
+			<section class="relative flex flex-col justify-center min-h-[40vh] z-0 lg:h-[400px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/ts-line-repair-9558-800x800.jpg"
 					alt="Transmission lines at sunrise in rural area"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
@@ -81,12 +81,47 @@
 						members a reliable, affordable and responsible supply of electricity.
 
 					</p>
+					<h2 class="font-serif font-light text-3xl pt-10">Voice your support for Tri-State’s plan to ensure
+						reliable, responsible power</h2>
+					<p>
+						We all know how reliable power is critical to our rural way of life. Tri-State has filed a
+						preferred portfolio with the
+						Colorado Public Utilities Commission (Commission) that preserves reliability at the least cost,
+						while increasing
+						renewable energy supply and decreasing emissions.
+
+					</p>
+					<p>Tri-State’s preferred portfolio, which we have asked the Commission to approve, is central to
+						delivering a responsible
+						electricity system for the future. Our preferred portfolio presents the least-cost mix of
+						diverse resources, including
+						new wind and solar power projects, our first battery storage systems, and a new natural gas
+						power plant with
+						hydrogen-blend capability, to reliably serve growing rural energy needs. Our planning
+						demonstrates that we will always
+						have the power our members need, even during extreme weather events, and meet all emissions
+						reduction and renewable
+						energy requirements.</p>
+					<p>You can easily share your support through the Colorado Public Utilities Commission. Full
+						instructions below.</p>
+					<div class="flex flex-row justify-center gap-4">
+						<a href="https://tristate.coop/sites/default/files/PDF/resources/CalltoAction%20on%20Tri-State%20Preferred%20Plan.pdf"
+							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
+							target="_blank" rel="noopener">
+							Instructions
+						</a>
+						<a href="https://www.dora.state.co.us/pls/efi/EFI_COMMENT_GUI.Electric"
+							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black"
+							target="_blank" rel="noopener">
+							File Comment Here
+						</a>
+					</div>
 				</div>
 			</section>
 			<section
 				class="relative flex flex-col justify-center aspect-video sm:aspect-auto sm:h-[300px] lg:h-[400px] lg:min-h-0">
-				<img src="https://tristate.coop/sites/default/files/images/DSCF4006-800x800.jpg" alt="Heavy machinery"
-					class="absolute inset-0 w-full h-full object-cover z-0" />
+				<img src="https://tristate.coop/sites/default/files/images/ts-san-isabel-solar-515A0364-1200x800.jpg"
+					alt="Solar Array" class="absolute inset-0 w-full h-full object-cover z-0" />
 			</section>
 			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
 				<div class="mx-auto max-w-2xl space-y-4">
