OBR: AMI form rearrange

--- a/obr.htm
+++ b/obr.htm
@@ -116,33 +116,40 @@
 	</section>
 
 	<!-- Form Intro -->
-	<section class="px-8 py-16 text-center sm:grid sm:place-content-center"
-		style="background-color: #F5F5F5; padding-top:4rem; margin-top:0" id="apply">
+	<section class="px-8 pb-4 pt-20 text-center sm:grid sm:place-content-center" style="background-color: #F5F5F5;">
 		<div class="max-w-2xl space-y-4">
 			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
 				Get started with On-Bill Repayment
 			</h2>
 			<p class="text-balance">
+				<span class="text-lg font-semibold font-serif text-wrap-balance">What is On-Bill Repayment and How to
+					Get Started</span><br>
 				The On-Bill Repayment Program makes energy efficiency and electrification upgrades more accessible for
 				homeowners,
 				business owners, schools, and agricultural producers by connecting them to rebates, financing,
 				education, qualified
-				contractors, equipment, and energy audits. Our goal is to empower communities to reduce emissions and
-				lower energy
-				costs.
-
-
+				contractors, equipment, and energy audits.
 			</p>
 			<p class="text-balance">
-				To get started, select your co-op and complete the form below. After submission, you'll receive
-				communications
-				primarily from the Collective Clean Energy Fund and Zero Homes—be sure to check your email, including
-				spam and junk
-				folders, for important updates and next steps.
-
+				To get started, please review the table below to see whether you qualify for additional programs or
+				discounts based on
+				your income. We want to make sure we’re offering you the lowest cost option possible!
 			</p>
-			<p>Have questions? Call <span class="inline-block">720-263-2313</span></p>
 		</div>
+	</section>
+
+
+	<section class="px-8 pb-20 text-center" style="background-color: #F5F5F5;">
+		<p class="text-balance">
+			If you do not qualify, simply complete the interest form by selecting your co-op from the provided list
+			below.
+			After
+			submission, you'll receive communications primarily from the Collective Clean Energy Fund and Zero Homes—be
+			sure
+			to
+			check your email, including spam and junk folders, for important updates and next steps.
+		</p>
+		<p>Have questions? Call <span class="inline-block">720-263-2313</span></p>
 		<div class="grid place-items-center">
 			<div class="relative">
 				<select class="text-lg p-2 mt-8" data-coop-select>
@@ -163,8 +170,10 @@
 	<section style="background-color: #F5F5F5;">
 		<div data-zoho-container></div>
 	</section>
+
+
 	<!-- Video Columns -->
-	<section class="min-h-96 bg-gray mt-8 sm:grid sm:grid-cols-2">
+	<section class="min-h-96 bg-gray sm:grid sm:grid-cols-2">
 		<div class="relative grid aspect-video place-content-center sm:aspect-auto sm:order-2"><img
 				alt="Don't Choose Between Magic Land and Home Upgrades | Upgrade Home Installation for Energy Efficiency"
 				class="absolute size-full object-cover"
@@ -357,7 +366,7 @@
 	<section>
 
 
-		<h2 class="font-serif text-2xl font-light text-center m-0 pb-4" style="background-color: #F5F5F5;">
+		<h2 class="font-serif text-2xl font-light text-center pt-10 pb-4 mb-0" style="background-color: #F5F5F5;">
 			Your upgrades could be free
 		</h2>
 		<p>
